rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Jun 30 07:21:20 2025
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.18.0.2/32 ! -i br-38086c4b1c27 -j DROP
-A PREROUTING -d 172.18.0.3/32 ! -i br-38086c4b1c27 -j DROP
-A PREROUTING -d 172.18.0.4/32 ! -i br-38086c4b1c27 -j DROP
COMMIT
# Completed on Mon Jun 30 07:21:20 2025
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Jun 30 07:21:20 2025
*filter
:INPUT ACCEPT [131848:213546213]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [94686:74434325]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -d 192.168.195.101/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.101/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.102/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.102/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.103/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.103/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.104/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.104/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.105/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.105/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.106/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.106/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.107/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.107/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.108/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.108/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.109/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.109/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.110/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.110/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.111/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.111/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.112/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.112/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.113/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.113/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.114/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.114/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.115/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.115/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.116/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.116/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.117/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.117/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.118/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.118/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.119/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.119/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.120/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.120/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.121/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.121/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.122/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.122/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.123/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.123/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.124/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.124/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.125/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.125/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.126/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.126/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.127/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.127/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.128/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.128/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.129/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.129/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.130/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.130/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.131/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.131/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.132/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.132/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.133/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.133/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.134/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.134/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.135/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.135/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.136/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.136/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.137/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.137/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.138/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.138/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.139/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.139/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.140/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.140/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.141/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.141/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.142/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.142/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.143/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.143/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.144/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.144/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.145/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.145/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.146/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.146/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.147/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.147/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.148/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.148/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.149/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.149/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.150/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.150/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.151/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.151/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.152/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.152/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.153/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.153/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.154/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.154/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.155/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.155/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.156/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.156/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.157/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.157/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.158/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.158/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.159/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.159/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.160/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.160/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.161/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.161/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.162/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.162/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.163/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.163/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.164/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.164/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.165/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.165/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.166/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.166/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.167/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.167/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.168/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.168/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.169/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.169/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.170/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.170/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.171/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.171/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.172/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.172/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.173/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.173/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.174/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.174/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.175/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.175/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.176/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.176/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.177/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.177/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.178/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.178/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.179/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.179/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.180/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.180/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.181/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.181/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.182/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.182/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.183/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.183/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.184/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.184/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.185/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.185/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.186/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.186/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.187/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.187/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.188/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.188/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.189/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.189/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.190/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.190/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.191/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.191/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.192/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.192/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.193/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.193/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.194/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.194/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.195/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.195/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.196/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.196/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.197/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.197/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.198/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.198/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.199/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.199/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.195.200/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.195.200/32 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -i ens3 -o zt6nthpxpi -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i zt6nthpxpi -o ens3 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 -j LOG --log-prefix "SSH FORWARD: " --log-level 6
-A FORWARD -p tcp -m tcp --dport 3389 -j LOG --log-prefix "RDP FORWARD: " --log-level 6
-A DOCKER -d 172.18.0.3/32 ! -i br-38086c4b1c27 -o br-38086c4b1c27 -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-38086c4b1c27 -o br-38086c4b1c27 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-38086c4b1c27 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-38086c4b1c27 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-38086c4b1c27 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-38086c4b1c27 ! -o br-38086c4b1c27 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -o br-38086c4b1c27 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
COMMIT
# Completed on Mon Jun 30 07:21:20 2025
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Jun 30 07:21:20 2025
*nat
:PREROUTING ACCEPT [6778:260836]
:INPUT ACCEPT [6734:258224]
:OUTPUT ACCEPT [1333:180373]
:POSTROUTING ACCEPT [1428:186105]
:DOCKER - [0:0]
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10001 -j DNAT --to-destination 192.168.195.101:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20001 -j DNAT --to-destination 192.168.195.101:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10002 -j DNAT --to-destination 192.168.195.102:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20002 -j DNAT --to-destination 192.168.195.102:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10003 -j DNAT --to-destination 192.168.195.103:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20003 -j DNAT --to-destination 192.168.195.103:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10004 -j DNAT --to-destination 192.168.195.104:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20004 -j DNAT --to-destination 192.168.195.104:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10005 -j DNAT --to-destination 192.168.195.105:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20005 -j DNAT --to-destination 192.168.195.105:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10006 -j DNAT --to-destination 192.168.195.106:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20006 -j DNAT --to-destination 192.168.195.106:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10007 -j DNAT --to-destination 192.168.195.107:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20007 -j DNAT --to-destination 192.168.195.107:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10008 -j DNAT --to-destination 192.168.195.108:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20008 -j DNAT --to-destination 192.168.195.108:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10009 -j DNAT --to-destination 192.168.195.109:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20009 -j DNAT --to-destination 192.168.195.109:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10010 -j DNAT --to-destination 192.168.195.110:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20010 -j DNAT --to-destination 192.168.195.110:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10011 -j DNAT --to-destination 192.168.195.111:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20011 -j DNAT --to-destination 192.168.195.111:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10012 -j DNAT --to-destination 192.168.195.112:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20012 -j DNAT --to-destination 192.168.195.112:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10013 -j DNAT --to-destination 192.168.195.113:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20013 -j DNAT --to-destination 192.168.195.113:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10014 -j DNAT --to-destination 192.168.195.114:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20014 -j DNAT --to-destination 192.168.195.114:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10015 -j DNAT --to-destination 192.168.195.115:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20015 -j DNAT --to-destination 192.168.195.115:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10016 -j DNAT --to-destination 192.168.195.116:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20016 -j DNAT --to-destination 192.168.195.116:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10017 -j DNAT --to-destination 192.168.195.117:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20017 -j DNAT --to-destination 192.168.195.117:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10018 -j DNAT --to-destination 192.168.195.118:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20018 -j DNAT --to-destination 192.168.195.118:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10019 -j DNAT --to-destination 192.168.195.119:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20019 -j DNAT --to-destination 192.168.195.119:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10020 -j DNAT --to-destination 192.168.195.120:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20020 -j DNAT --to-destination 192.168.195.120:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10021 -j DNAT --to-destination 192.168.195.121:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20021 -j DNAT --to-destination 192.168.195.121:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10022 -j DNAT --to-destination 192.168.195.122:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20022 -j DNAT --to-destination 192.168.195.122:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10023 -j DNAT --to-destination 192.168.195.123:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20023 -j DNAT --to-destination 192.168.195.123:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10024 -j DNAT --to-destination 192.168.195.124:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20024 -j DNAT --to-destination 192.168.195.124:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10025 -j DNAT --to-destination 192.168.195.125:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20025 -j DNAT --to-destination 192.168.195.125:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10026 -j DNAT --to-destination 192.168.195.126:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20026 -j DNAT --to-destination 192.168.195.126:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10027 -j DNAT --to-destination 192.168.195.127:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20027 -j DNAT --to-destination 192.168.195.127:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10028 -j DNAT --to-destination 192.168.195.128:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20028 -j DNAT --to-destination 192.168.195.128:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10029 -j DNAT --to-destination 192.168.195.129:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20029 -j DNAT --to-destination 192.168.195.129:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10030 -j DNAT --to-destination 192.168.195.130:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20030 -j DNAT --to-destination 192.168.195.130:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10031 -j DNAT --to-destination 192.168.195.131:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20031 -j DNAT --to-destination 192.168.195.131:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10032 -j DNAT --to-destination 192.168.195.132:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20032 -j DNAT --to-destination 192.168.195.132:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10033 -j DNAT --to-destination 192.168.195.133:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20033 -j DNAT --to-destination 192.168.195.133:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10034 -j DNAT --to-destination 192.168.195.134:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20034 -j DNAT --to-destination 192.168.195.134:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10035 -j DNAT --to-destination 192.168.195.135:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20035 -j DNAT --to-destination 192.168.195.135:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10036 -j DNAT --to-destination 192.168.195.136:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20036 -j DNAT --to-destination 192.168.195.136:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10037 -j DNAT --to-destination 192.168.195.137:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20037 -j DNAT --to-destination 192.168.195.137:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10038 -j DNAT --to-destination 192.168.195.138:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20038 -j DNAT --to-destination 192.168.195.138:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10039 -j DNAT --to-destination 192.168.195.139:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20039 -j DNAT --to-destination 192.168.195.139:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10040 -j DNAT --to-destination 192.168.195.140:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20040 -j DNAT --to-destination 192.168.195.140:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10041 -j DNAT --to-destination 192.168.195.141:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20041 -j DNAT --to-destination 192.168.195.141:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10042 -j DNAT --to-destination 192.168.195.142:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20042 -j DNAT --to-destination 192.168.195.142:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10043 -j DNAT --to-destination 192.168.195.143:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20043 -j DNAT --to-destination 192.168.195.143:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10044 -j DNAT --to-destination 192.168.195.144:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20044 -j DNAT --to-destination 192.168.195.144:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10045 -j DNAT --to-destination 192.168.195.145:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20045 -j DNAT --to-destination 192.168.195.145:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10046 -j DNAT --to-destination 192.168.195.146:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20046 -j DNAT --to-destination 192.168.195.146:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10047 -j DNAT --to-destination 192.168.195.147:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20047 -j DNAT --to-destination 192.168.195.147:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10048 -j DNAT --to-destination 192.168.195.148:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20048 -j DNAT --to-destination 192.168.195.148:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10049 -j DNAT --to-destination 192.168.195.149:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20049 -j DNAT --to-destination 192.168.195.149:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10050 -j DNAT --to-destination 192.168.195.150:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20050 -j DNAT --to-destination 192.168.195.150:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10051 -j DNAT --to-destination 192.168.195.151:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20051 -j DNAT --to-destination 192.168.195.151:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10052 -j DNAT --to-destination 192.168.195.152:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20052 -j DNAT --to-destination 192.168.195.152:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10053 -j DNAT --to-destination 192.168.195.153:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20053 -j DNAT --to-destination 192.168.195.153:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10054 -j DNAT --to-destination 192.168.195.154:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20054 -j DNAT --to-destination 192.168.195.154:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10055 -j DNAT --to-destination 192.168.195.155:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20055 -j DNAT --to-destination 192.168.195.155:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10056 -j DNAT --to-destination 192.168.195.156:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20056 -j DNAT --to-destination 192.168.195.156:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10057 -j DNAT --to-destination 192.168.195.157:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20057 -j DNAT --to-destination 192.168.195.157:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10058 -j DNAT --to-destination 192.168.195.158:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20058 -j DNAT --to-destination 192.168.195.158:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10059 -j DNAT --to-destination 192.168.195.159:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20059 -j DNAT --to-destination 192.168.195.159:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10060 -j DNAT --to-destination 192.168.195.160:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20060 -j DNAT --to-destination 192.168.195.160:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10061 -j DNAT --to-destination 192.168.195.161:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20061 -j DNAT --to-destination 192.168.195.161:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10062 -j DNAT --to-destination 192.168.195.162:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20062 -j DNAT --to-destination 192.168.195.162:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10063 -j DNAT --to-destination 192.168.195.163:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20063 -j DNAT --to-destination 192.168.195.163:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10064 -j DNAT --to-destination 192.168.195.164:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20064 -j DNAT --to-destination 192.168.195.164:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10065 -j DNAT --to-destination 192.168.195.165:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20065 -j DNAT --to-destination 192.168.195.165:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10066 -j DNAT --to-destination 192.168.195.166:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20066 -j DNAT --to-destination 192.168.195.166:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10067 -j DNAT --to-destination 192.168.195.167:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20067 -j DNAT --to-destination 192.168.195.167:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10068 -j DNAT --to-destination 192.168.195.168:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20068 -j DNAT --to-destination 192.168.195.168:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10069 -j DNAT --to-destination 192.168.195.169:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20069 -j DNAT --to-destination 192.168.195.169:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10070 -j DNAT --to-destination 192.168.195.170:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20070 -j DNAT --to-destination 192.168.195.170:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10071 -j DNAT --to-destination 192.168.195.171:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20071 -j DNAT --to-destination 192.168.195.171:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10072 -j DNAT --to-destination 192.168.195.172:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20072 -j DNAT --to-destination 192.168.195.172:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10073 -j DNAT --to-destination 192.168.195.173:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20073 -j DNAT --to-destination 192.168.195.173:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10074 -j DNAT --to-destination 192.168.195.174:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20074 -j DNAT --to-destination 192.168.195.174:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10075 -j DNAT --to-destination 192.168.195.175:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20075 -j DNAT --to-destination 192.168.195.175:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10076 -j DNAT --to-destination 192.168.195.176:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20076 -j DNAT --to-destination 192.168.195.176:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10077 -j DNAT --to-destination 192.168.195.177:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20077 -j DNAT --to-destination 192.168.195.177:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10078 -j DNAT --to-destination 192.168.195.178:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20078 -j DNAT --to-destination 192.168.195.178:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10079 -j DNAT --to-destination 192.168.195.179:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20079 -j DNAT --to-destination 192.168.195.179:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10080 -j DNAT --to-destination 192.168.195.180:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20080 -j DNAT --to-destination 192.168.195.180:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10081 -j DNAT --to-destination 192.168.195.181:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20081 -j DNAT --to-destination 192.168.195.181:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10082 -j DNAT --to-destination 192.168.195.182:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20082 -j DNAT --to-destination 192.168.195.182:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10083 -j DNAT --to-destination 192.168.195.183:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20083 -j DNAT --to-destination 192.168.195.183:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10084 -j DNAT --to-destination 192.168.195.184:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20084 -j DNAT --to-destination 192.168.195.184:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10085 -j DNAT --to-destination 192.168.195.185:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20085 -j DNAT --to-destination 192.168.195.185:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10086 -j DNAT --to-destination 192.168.195.186:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20086 -j DNAT --to-destination 192.168.195.186:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10087 -j DNAT --to-destination 192.168.195.187:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20087 -j DNAT --to-destination 192.168.195.187:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10088 -j DNAT --to-destination 192.168.195.188:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20088 -j DNAT --to-destination 192.168.195.188:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10089 -j DNAT --to-destination 192.168.195.189:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20089 -j DNAT --to-destination 192.168.195.189:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10090 -j DNAT --to-destination 192.168.195.190:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20090 -j DNAT --to-destination 192.168.195.190:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10091 -j DNAT --to-destination 192.168.195.191:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20091 -j DNAT --to-destination 192.168.195.191:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10092 -j DNAT --to-destination 192.168.195.192:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20092 -j DNAT --to-destination 192.168.195.192:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10093 -j DNAT --to-destination 192.168.195.193:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20093 -j DNAT --to-destination 192.168.195.193:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10094 -j DNAT --to-destination 192.168.195.194:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20094 -j DNAT --to-destination 192.168.195.194:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10095 -j DNAT --to-destination 192.168.195.195:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20095 -j DNAT --to-destination 192.168.195.195:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10096 -j DNAT --to-destination 192.168.195.196:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20096 -j DNAT --to-destination 192.168.195.196:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10097 -j DNAT --to-destination 192.168.195.197:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20097 -j DNAT --to-destination 192.168.195.197:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10098 -j DNAT --to-destination 192.168.195.198:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20098 -j DNAT --to-destination 192.168.195.198:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10099 -j DNAT --to-destination 192.168.195.199:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20099 -j DNAT --to-destination 192.168.195.199:3389
-A PREROUTING -i ens3 -p tcp -m tcp --dport 10100 -j DNAT --to-destination 192.168.195.200:22
-A PREROUTING -i ens3 -p tcp -m tcp --dport 20100 -j DNAT --to-destination 192.168.195.200:3389
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o br-38086c4b1c27 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 192.168.195.0/24 -o ens3 -j MASQUERADE
-A POSTROUTING -o zt6nthpxpi -j MASQUERADE
-A DOCKER -i br-38086c4b1c27 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER -d 57.128.195.27/32 ! -i br-38086c4b1c27 -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.18.0.3:443
COMMIT
# Completed on Mon Jun 30 07:21:20 2025
